--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,17 @@
   <meta charset="utf-8">
   <title>SaveandLoad</title>
   <base href="/">
+  <link href="../../styles/material.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdn.syncfusion.com/ej2/21.1.35/material.css" rel="stylesheet"/>
 </head>
-<body>
+<body class="ej2-new">
+
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WLQL39J"height="0"width="0"style="display:none;visibility:hidden"></iframe></noscript>
+  <div hidden id="sync-analytics" data-queue="EJ2 - Angular - Demos"></div>
+
   <app-root></app-root>
 </body>
 </html>
